--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.18.9",
+    "react-native-maps": "0.31.1",
+    "expo-location": "~14.3.0",
+    "expo-camera": "~12.5.0",
+    "expo-media-library": "~14.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
