--- a/package.json
+++ b/package.json
@@ -13,22 +13,26 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.5",
     "expo": "^46.0.21",
+    "expo-camera": "~12.5.0",
     "expo-font": "~10.2.0",
+    "expo-location": "~14.3.0",
+    "expo-media-library": "~14.2.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.6.11",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.9",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-maps": "0.31.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.9",
-    "react-native-maps": "0.31.1",
-    "expo-location": "~14.3.0",
-    "expo-camera": "~12.5.0",
-    "expo-media-library": "~14.2.0"
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
