--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "expo-dev-client": "~1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
