--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
-    "expo-dev-client": "~1.3.1"
+    "expo-dev-client": "~1.3.1",
+    "expo-updates": "~0.14.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
