--- a/eas.json
+++ b/eas.json
@@ -10,7 +10,10 @@
     "preview": {
       "distribution": "internal"
     },
-    "production": {}
+    "production": {},
+    "sofiahakalo-rn-app": {
+      "releaseChannel": "sofiahakalo-rn-app"
+    }
   },
   "submit": {
     "production": {}
