--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@reduxjs/toolkit": "^1.9.5",
     "expo": "^46.0.21",
     "expo-camera": "~12.5.0",
+    "expo-dev-client": "~1.3.1",
     "expo-font": "~10.2.0",
     "expo-location": "~14.3.0",
     "expo-media-library": "~14.2.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.14.7",
     "firebase": "^9.6.11",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.9",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-maps": "0.31.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
@@ -33,9 +36,7 @@
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
-    "redux-persist": "^6.0.0",
-    "expo-dev-client": "~1.3.1",
-    "expo-updates": "~0.14.7"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
